# fastapi-opinionated-socket

./: README.md  pyproject.toml
fastapi_opinionated_socket/: events.py  helpers.py  plugin.py
